--- a/ТРПО4/Pages/AuthPage.xaml
+++ b/ТРПО4/Pages/AuthPage.xaml
@@ -8,26 +8,24 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Авторизация">
 
-    <Grid Background="#FFE0A9AF">
+    <Grid Background="#ebc3dd">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="14*"/>
-            <ColumnDefinition Width="69*"/>
-            <ColumnDefinition Width="179*"/>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="60"/>
+            <ColumnDefinition Width="170"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="48*"/>
-            <RowDefinition Height="43.333"/>
-            <RowDefinition Height="171.333"/>
-            <RowDefinition Height="37*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="125"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="Логин"  VerticalAlignment="Top" Height="41" Grid.ColumnSpan="2" Margin="13.667,2,2.667,0" Grid.Column="1" Background="#FFD1EEFC" Grid.Row="1" />
-        <TextBox x:Name="TextBoxLogin" Height="Auto" TextWrapping="Wrap" Text="" Grid.Column="3" Margin="2.333,2,0.333,0.333" Grid.Row="1" />
-        <Label Content="Пароль" Grid.Row="2" VerticalAlignment="Top" Height="36"  Margin="13.667,0.667,2.667,0" Grid.ColumnSpan="2" Grid.Column="1" Background="#FFD1EEFC"/>
-        <PasswordBox x:Name="PasswordBox" Grid.Column="3" Height="41" Grid.Row="2"  VerticalAlignment="Top"  Margin="2.333,0.667,0.333,0" />
-        <Button Click="ButtonEnter_OnClick"  Content="Вход" Grid.Column="3" HorizontalAlignment="Left" Margin="2.333,41.667,0,0" Grid.Row="2" VerticalAlignment="Top" Width="176" Height="40" Background="#FFB5D5CA"/>
-        <Button Content="Регистрация" Click="ButtonRegistration_OnClick" Grid.Column="3" HorizontalAlignment="Left" Margin="2.333,81.667,0,0" Grid.Row="2" VerticalAlignment="Top" Width="176" Height="40" Background="#FFB5D5CA" />
+
+        <Label Content="Логин"  Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Height="25" />
+        <TextBox x:Name="TextBoxLogin" Grid.Column="2" Height="25" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" />
+        <Label Content="Пароль" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Height="25" Margin="0,30,0,0" />
+        <PasswordBox x:Name="PasswordBox" Grid.Column="2" Margin="0,30,0,0" Grid.Row="1" VerticalAlignment="Top" Height="25" />
+        <Button Click="ButtonEnter_OnClick"  Content="Вход" Grid.Column="2" Margin="0,60,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Background="#d49fc2 "/>
+        <Button Content="Регистрация" Click="ButtonRegistration_OnClick" Grid.Column="2" Margin="0,95,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Background="#d49fc2 " />
     </Grid>
 </Page>
