--- a/ТРПО4/MainWindow.xaml
+++ b/ТРПО4/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ТРПО4"
         mc:Ignorable="d"
        Title="MainWindow" Height="450" Width="800">
-    <Grid Background="#FFE0A9AF">
+    <Grid Background="#ebc3dd">
         <Grid.RowDefinitions>
             <RowDefinition Height="43*"/>
             <RowDefinition Height="117*"/>
@@ -18,9 +18,9 @@
             <ColumnDefinition Width="295*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="ButtonBack" Content="Назад" Grid.Column="1" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top" Width="96" Height="44" Click="ButtonBack_OnClick"/>
+        <Button x:Name="ButtonBack" Content="Назад" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,695,0" VerticalAlignment="Top" Width="86" Height="35" Click="ButtonBack_OnClick" Background="#d49fc2 " />
         <Frame x:Name="MainFrame" Content="Frame" Margin="0,0.333,0.333,0" Source="Pages/AuthPage.xaml" Grid.Row="1" Grid.Column="1" Navigated="MainFrame_OnNavigated"/>
-        <Rectangle Fill="#FFE0A9AF" Height="73" Margin="0,0,0.333,-0.333" Grid.Row="2" Stroke="Black" StrokeThickness="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <Button x:Name="ButtonCalc" Content="Калькулятор"  Click="КалькуляторButton_OnClick" Grid.Column="1" HorizontalAlignment="Left" Margin="236,13,0,0" VerticalAlignment="Top" Width="126" Height="44"/>
+        <Rectangle Fill="#ebc3dd" Height="73" Margin="0,0,0.333,-0.333" Grid.Row="2" Stroke="Black" StrokeThickness="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+        <Button x:Name="ButtonCalc" Content="Калькулятор"  Click="КалькуляторButton_OnClick" Grid.Column="1" HorizontalAlignment="Left" Margin="647,5,0,0" VerticalAlignment="Top" Width="126" Height="44" Background="#d49fc2 " />
     </Grid>
 </Window>
