--- a/ТРПО4/Pages/Page2.xaml
+++ b/ТРПО4/Pages/Page2.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Page2">
 
-    <Grid Background="#FFE0A9AF">
+    <Grid Background="#ebc3dd">
 
     </Grid>
 </Page>
