--- a/ТРПО4/App.xaml
+++ b/ТРПО4/App.xaml
@@ -3,11 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ТРПО4"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
+        
+        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Dictionary.xaml"/>
+                <ResourceDictionary Source="DictionaryCal.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+
     </Application.Resources>
+    
 </Application>
