--- a/ТРПО4/Pages/Calculator.xaml
+++ b/ТРПО4/Pages/Calculator.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
      Title="Calculator">
 
-    <Grid x:Name="LayoutRoot"  >
+    <Grid x:Name="LayoutRoot" Background="White"  >
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -25,7 +25,7 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="textBlock" Grid.Column="0"
+        <TextBlock x:Name="textBlock" Background="White"  Grid.Column="0"
 Grid.ColumnSpan="4" Margin="0,0,4,0" />
         <Button Grid.Column="2" Grid.Row="4" Background="#FFFFFCD6" FontWeight="Bold" FontSize="20" Height="Auto" >1</Button>
         <Button Grid.Column="3" Grid.Row="4" Background="#FFFFFCD6" FontWeight="Bold" FontSize="20" Height="Auto" >2</Button>
@@ -37,25 +37,25 @@ Grid.ColumnSpan="4" Margin="0,0,4,0" />
         <Button Grid.Column="3" Grid.Row="2" Background="#FFFFFCD6" FontWeight="Bold" FontSize="20" Height="Auto" >8</Button>
         <Button Grid.Column="4" Grid.Row="2" Background="#FFFFFCD6" FontWeight="Bold" FontSize="20" Height="Auto" >9</Button>
         <Button Grid.Column="3" Grid.Row="5" Background="#FFFFFCD6" FontWeight="Bold" FontSize="20" Height="Auto">0</Button>
-        <Button Grid.Column="5" Grid.Row="4">+</Button>
-        <Button Grid.Column="5" Grid.Row="3">-</Button>
-        <Button Grid.Column="5" Grid.Row="2">*</Button>
-        <Button Grid.Column="5" Grid.Row="1">/</Button>
-        <Button Grid.Column="5" Grid.Row="5">=</Button>
-        <Button Grid.Column="2" Grid.Row="1">CLEAR</Button>
-        <Button Grid.Column="0" Grid.Row="5">√x</Button>
-        <Button Grid.Column="1" Grid.Row="5">|x|</Button>
-        <Button Grid.Column="3" Grid.Row="1">+/–</Button>
-        <Button Grid.Column="0" Grid.Row="4">x^2</Button>
-        <Button Grid.Column="1" Grid.Row="1">y^x</Button>
-        <Button Grid.Column="1" Grid.Row="2">10^x</Button>
-        <Button Grid.Column="1" Grid.Row="3">log</Button>
-        <Button Grid.Column="1" Grid.Row="4">n!</Button>
-        <Button Grid.Column="4" Grid.Row="1">%</Button>
-        <Button Grid.Column="0" Grid.Row="1">sin</Button>
-        <Button Grid.Column="0" Grid.Row="2">cos</Button>
-        <Button Grid.Column="0" Grid.Row="3">tan</Button>
-        <Button Grid.Column="2" Grid.Row="5">1/x</Button>
-        <Button Grid.Column="4" Grid.Row="5">.</Button>
+        <Button Grid.Column="5" Grid.Row="4" Background="#ebc3dd" >+</Button>
+        <Button Grid.Column="5" Grid.Row="3" Background="#ebc3dd"  >-</Button>
+        <Button Grid.Column="5" Grid.Row="2" Background="#ebc3dd" >*</Button>
+        <Button Grid.Column="5" Grid.Row="1" Background="#ebc3dd" >/</Button>
+        <Button Grid.Column="5" Grid.Row="5" Background="#ebc3dd" >=</Button>
+        <Button Grid.Column="2" Grid.Row="1" Background="#ebc3dd" >CLEAR</Button>
+        <Button Grid.Column="0" Grid.Row="5" Background="#d49fc2" >√x</Button>
+        <Button Grid.Column="1" Grid.Row="5" Background="#d49fc2" >|x|</Button>
+        <Button Grid.Column="3" Grid.Row="1" Background="#d49fc2" >+/–</Button>
+        <Button Grid.Column="0" Grid.Row="4" Background="#d49fc2" >x^2</Button>
+        <Button Grid.Column="1" Grid.Row="1" Background="#d49fc2" >y^x</Button>
+        <Button Grid.Column="1" Grid.Row="2" Background="#d49fc2" >10^x</Button>
+        <Button Grid.Column="1" Grid.Row="3" Background="#d49fc2"  >log</Button>
+        <Button Grid.Column="1" Grid.Row="4" Background="#d49fc2"  >n!</Button>
+        <Button Grid.Column="4" Grid.Row="1" Background="#d49fc2" >%</Button>
+        <Button Grid.Column="0" Grid.Row="1" Background="#d49fc2"  >sin</Button>
+        <Button Grid.Column="0" Grid.Row="2" Background="#d49fc2" >cos</Button>
+        <Button Grid.Column="0" Grid.Row="3" Background="#d49fc2" >tan</Button>
+        <Button Grid.Column="2" Grid.Row="5" Background="#d49fc2" >1/x</Button>
+        <Button Grid.Column="4" Grid.Row="5" Background="#ebc3dd" >.</Button>
     </Grid>
 </Page>
