--- a/ТРПО4/Pages/Page2.xaml
+++ b/ТРПО4/Pages/Page2.xaml
@@ -6,9 +6,35 @@
       xmlns:local="clr-namespace:ТРПО4.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Page2">
+      Title="Регистрация">
 
     <Grid Background="#ebc3dd">
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="290"/>
+            <ColumnDefinition Width="425"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="300"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label Content="Введите логин:" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Height="25"/>
+        <TextBox x:Name="login" Grid.Column="1" Height="25" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="0,20,0,0"/>
+        <Label Content="Ведите пароль:" Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Height="25" Margin="17,0,118,0" RenderTransformOrigin="1.034,-1"/>
+        <PasswordBox x:Name="password" Grid.Column="2" Margin="17,25,118,0" Grid.Row="1" VerticalAlignment="Top" Height="25"/>
+        <Label Content="Повторите пароль:" Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Height="25" Margin="17,60,118,0"/>
+        <PasswordBox x:Name="passwordCopy" Grid.Column="2" Margin="12,90,123,0" Grid.Row="1" VerticalAlignment="Top" Height="25"/>
+        <Label Content="Введите ФИО:" Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Height="25" Margin="2,50,423,0" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="textBoxFIO" Height="25" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Margin="40,90,3,0" Grid.ColumnSpan="2"/>
+        <Label Content="Выберите роль:" Grid.Row="1" VerticalAlignment="Top" Height="25" Margin="40,125,3,0" Grid.ColumnSpan="2"/>
+        <ComboBox Name="role" SelectedIndex="1" Height="30" Grid.Row="1" Margin="40,150,3,0" VerticalAlignment="Top" Grid.ColumnSpan="2">
+            <TextBlock>Абитуриент</TextBlock>
+            <TextBlock>Амин</TextBlock>
+        </ComboBox>
+        <Button Click="reg_click" Content="Зарегистрироваться" Grid.Column="2" Margin="7,145,0,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="185" HorizontalAlignment="Left"/>
+        <Button Click="back_click" Content="Отмена" Grid.Column="2" Margin="0,145,123,0" Grid.Row="1" VerticalAlignment="Top" Height="30" Width="95" HorizontalAlignment="Right"/>
     </Grid>
 </Page>
