--- a/ТРПО4/Pages/Calculator.xaml
+++ b/ТРПО4/Pages/Calculator.xaml
@@ -43,19 +43,19 @@ Grid.ColumnSpan="4" Margin="0,0,4,0" />
         <Button Grid.Column="5" Grid.Row="1" Background="#ebc3dd" >/</Button>
         <Button Grid.Column="5" Grid.Row="5" Background="#ebc3dd" >=</Button>
         <Button Grid.Column="2" Grid.Row="1" Background="#ebc3dd" >CLEAR</Button>
-        <Button Grid.Column="0" Grid.Row="5" Background="#d49fc2" >√x</Button>
-        <Button Grid.Column="1" Grid.Row="5" Background="#d49fc2" >|x|</Button>
-        <Button Grid.Column="3" Grid.Row="1" Background="#d49fc2" >+/–</Button>
-        <Button Grid.Column="0" Grid.Row="4" Background="#d49fc2" >x^2</Button>
-        <Button Grid.Column="1" Grid.Row="1" Background="#d49fc2" >y^x</Button>
-        <Button Grid.Column="1" Grid.Row="2" Background="#d49fc2" >10^x</Button>
+        <Button Grid.Column="0" Grid.Row="5" Background="#d496c8" >√x</Button>
+        <Button Grid.Column="1" Grid.Row="5" Background="#d496c8" >|x|</Button>
+        <Button Grid.Column="3" Grid.Row="1" Background="#d496c8" >+/–</Button>
+        <Button Grid.Column="0" Grid.Row="4" Background="#d496c8" >x^2</Button>
+        <Button Grid.Column="1" Grid.Row="1" Background="#d496c8" >y^x</Button>
+        <Button Grid.Column="1" Grid.Row="2" Background="#d496c8" >10^x</Button>
         <Button Grid.Column="1" Grid.Row="3" Background="#d49fc2" >log</Button>
-        <Button Grid.Column="1" Grid.Row="4" Background="#d49fc2" >n!</Button>
+        <Button Grid.Column="1" Grid.Row="4" Background="#d496c8" >n!</Button>
         <Button Grid.Column="4" Grid.Row="1" Background="#d49fc2" >%</Button>
-        <Button Grid.Column="0" Grid.Row="1" Background="#d49fc2" >sin</Button>
+        <Button Grid.Column="0" Grid.Row="1" Background="#d496c8" >sin</Button>
         <Button Grid.Column="0" Grid.Row="2" Background="#d49fc2" >cos</Button>
         <Button Grid.Column="0" Grid.Row="3" Background="#d49fc2" >tan</Button>
-        <Button Grid.Column="2" Grid.Row="5" Background="#d49fc2" >1/x</Button>
+        <Button Grid.Column="2" Grid.Row="5" Background="#d496c8" >1/x</Button>
         <Button Grid.Column="4" Grid.Row="5" Background="#ebc3dd" >.</Button>
     </Grid>
 </Page>
