--- a/ТРПО4/MainWindow.xaml
+++ b/ТРПО4/MainWindow.xaml
@@ -21,8 +21,8 @@
         <Button x:Name="ButtonBack" Content="Назад" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,695,0" VerticalAlignment="Top" Width="86" Height="35" Click="ButtonBack_OnClick" Background="#d49fc2 " />
         <Frame x:Name="MainFrame" Content="Frame" Margin="0,0.333,0.333,0" Source="Pages/AuthPage.xaml" Grid.Row="1" Grid.Column="1" Navigated="MainFrame_OnNavigated"/>
         <Rectangle Fill="#ebc3dd" Height="73" Margin="0,0,0.333,-0.333" Grid.Row="2" Stroke="Black" StrokeThickness="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <Button x:Name="ButtonCalc" Content="Калькулятор"  Click="КалькуляторButton_OnClick" Grid.Column="1" HorizontalAlignment="Left" Margin="647,5,0,0" VerticalAlignment="Top" Width="126" Height="44" Background="#d49fc2 " />
-        <Button Click="export_click" Content="Экспорт" Grid.Column="1" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="140" HorizontalAlignment="Left"/>
+        <!--<Button x:Name="ButtonCalc" Content="Калькулятор"  Click="КалькуляторButton_OnClick" Grid.Column="1" HorizontalAlignment="Left" Margin="647,5,0,0" VerticalAlignment="Top" Width="126" Height="44" Background="#d49fc2 " />-->
+        <Button Click="export_click" Content="Экспорт" Margin="3,10.2,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="152" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
         <Button Click="import_click" Content="Импорт" Grid.Column="1" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="140" HorizontalAlignment="Right"/>
 
 
