--- a/ТРПО4/Pages/abiturient.xaml
+++ b/ТРПО4/Pages/abiturient.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ТРПО4.Pages.CustomerMenu"
+﻿<Page x:Class="ТРПО4.Pages.abiturient"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:ТРПО4.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="CustomerMenu">
+      Title="abiturient">
+
     <Grid Background="#ebc3dd">
         <Grid.RowDefinitions>
             <RowDefinition Height="43*"/>
@@ -18,9 +19,6 @@
             <ColumnDefinition Width="295*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Button    Content="Абитуриент" Click="Переход_1_OnClick" HorizontalAlignment="Left" Margin="236.8,6.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1"  FontSize="18" Grid.Row="1"/>
-        <Button Content="Специальность" Click="Переход_2_OnClick" HorizontalAlignment="Left" Margin="236.8,46.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1" Grid.Row="1"  FontSize="18"/>
-        <Button Content="Населенный пункт " Click="Переход_3_OnClick" HorizontalAlignment="Left" Margin="236.8,86.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1" Grid.Row="1" FontSize="18" RenderTransformOrigin="0.491,0.032"/>
 
     </Grid>
 </Page>
