--- a/ТРПО4/Pages/abiturient.xaml
+++ b/ТРПО4/Pages/abiturient.xaml
@@ -5,20 +5,49 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ТРПО4.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="1000"
       Title="abiturient">
 
     <Grid Background="#ebc3dd">
         <Grid.RowDefinitions>
-            <RowDefinition Height="43*"/>
-            <RowDefinition Height="117*"/>
-            <RowDefinition Height="47*"/>
+            <RowDefinition Height="377*"/>
+            <RowDefinition Height="73*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="295*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Row="0" Name="DataGridCar" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,10,0,69.6" SelectionChanged="DataGridCar_SelectionChanged" Grid.RowSpan="2">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Фамилия" Binding="{Binding Surname}" Width="60"/>
+                <DataGridTextColumn Header="Имя" Binding="{Binding  Name}" Width="50"/>
+                <DataGridTextColumn Header="Отчество" Binding="{Binding Otchistvo}" Width="60"/>
+                <DataGridTextColumn Header="Пол" Binding="{Binding Gender}" Width="30"/>
+                <DataGridTextColumn Header="День Рождения" Binding="{Binding Birthday}" Width="60"/>
+                <DataGridTextColumn Header="Гражданство" Binding="{Binding Grajdanstvo}" Width="60"/>
+                <DataGridTextColumn Header="Дом" Binding="{Binding  Dom}" Width="35"/>
+                <DataGridTextColumn Header="Корпус" Binding="{Binding Korpys }" Width="50"/>
+                <DataGridTextColumn Header="Квартира" Binding="{Binding Kvartira}" Width="60"/>
+                <DataGridTextColumn Header="Лиготы" Binding="{Binding L_goti}" Width="60"/>
+                <DataGridTextColumn Header="Инвалидность" Binding="{Binding invalidnost_}" Width="35"/>
+                <DataGridTextColumn Header="Участие в военных действиях" Binding="{Binding Participation_in_hostilities}" Width="30"/>
+                <DataGridTextColumn Header="Мать" Binding="{Binding Mother}" Width="60"/>
+                <DataGridTextColumn Header="Отец" Binding="{Binding Father}" Width="60"/>
+                <DataGridTextColumn Header="Средний бал" Binding="{Binding  Sredniy_bal}" Width="80"/>
+                <DataGridTextColumn Header="Дата заявления" Binding="{Binding Data_zayavleniya}" Width="30"/>
+                <DataGridTextColumn Header="Номер заявления" Binding="{Binding Data_zayavleniya}" Width="60"/>
+                <DataGridTextColumn Header="Национальность" Binding="{Binding Nationality2.Naimenovanie}" Width="60"/>
+                <DataGridTextColumn Header="Школа" Binding="{Binding  Shkola2.Naimenovanie}" Width="35"/>
+                <DataGridTextColumn Header="Специальность"  Binding="{Binding Specil_noct_2.Naimenovanie}" Width="35"/>
+                <DataGridTextColumn Header="Улица" Binding="{Binding   Ylitsa2.Naimenovanie}" Width="35"/>
+                <DataGridTemplateColumn Width="*">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Name="ButtonEdit" Content="Редактировать" Click="ButtonEdit_OnClick" ></Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button Grid.Row="1" Name="ButtonAdd" Content="Добавить" HorizontalAlignment="Left" Click="ButtonAdd_OnClick" Margin="0,0.2,0,-0.4" Width="170" Background="#d49fc2 "/>
+        <Button Grid.Row="1" Name="ButtonDel" Content="Удалить" HorizontalAlignment="Right" Click="ButtonDel_OnClick" Margin="0,0.2,0,-0.4" Width="145" RenderTransformOrigin="0.501,0.501" Background="#d49fc2 "/>
+
 
     </Grid>
 </Page>
