--- a/ТРПО4/Pages/Special'nost'.xaml
+++ b/ТРПО4/Pages/Special'nost'.xaml
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <DataGrid Grid.Row="0" Name="DataGridCar" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,10,0,69.6" SelectionChanged="DataGridCar_SelectionChanged" Grid.RowSpan="2">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Специальность"  Binding="{Binding Specil_noct_2.Naimenovanie}" Width="35"/>
+                <DataGridTextColumn Header="Специальность"  Binding="{Binding Specilnoct2.Naimenovanie}" Width="35"/>
  
                 <DataGridTemplateColumn Width="*">
                     <DataGridTemplateColumn.CellTemplate>
