--- a/ТРПО4/Pages/Special'nost'.xaml
+++ b/ТРПО4/Pages/Special'nost'.xaml
@@ -10,13 +10,13 @@
 
     <Grid  Background="#ebc3dd">
         <Grid.RowDefinitions>
-            <RowDefinition Height="377*"/>
-            <RowDefinition Height="73*"/>
+            <RowDefinition/>
+            <RowDefinition Height="154.4"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="0" Name="DataGridCar" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,10,0,69.6" SelectionChanged="DataGridCar_SelectionChanged" Grid.RowSpan="2">
+        <DataGrid Grid.Row="0" Name="DataGridCar" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Специальность"  Binding="{Binding Specilnoct2.Naimenovanie}" Width="35"/>
- 
+                <DataGridTextColumn Header="Специальность"  Binding="{Binding Naimenovanie}" Width="95"/>
+
                 <DataGridTemplateColumn Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -26,9 +26,8 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Grid.Row="1" Name="ButtonAdd" Content="Добавить" HorizontalAlignment="Left" Click="ButtonAdd_OnClick" Margin="0,0.2,0,-0.4" Width="170" Background="#d49fc2 "/>
-        <Button Grid.Row="1" Name="ButtonDel" Content="Удалить" HorizontalAlignment="Right" Click="ButtonDel_OnClick" Margin="0,0.2,0,-0.4" Width="145" RenderTransformOrigin="0.501,0.501" Background="#d49fc2 "/>
-
+        <Button Name="ButtonAdd" Content="Добавить" HorizontalAlignment="Left" Click="ButtonAdd_OnClick" Margin="-5,14.8,0,74.6" Width="150" Grid.Row="1"/>
+        <Button Name="ButtonDel" Content="Удалить" HorizontalAlignment="Right" Click="ButtonDel_OnClick" Margin="0,14.8,0,79.6" Width="150" Grid.Row="1"/>
 
     </Grid>
 </Page>
