--- a/ТРПО4/MainWindow.xaml
+++ b/ТРПО4/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ТРПО4"
         mc:Ignorable="d"
-       Title="MainWindow" Height="450" Width="800">
+       Title="MainWindow" Height="450" Width="1000">
     <Grid Background="#ebc3dd">
         <Grid.RowDefinitions>
-            <RowDefinition Height="43*"/>
-            <RowDefinition Height="117*"/>
-            <RowDefinition Height="47*"/>
+            <RowDefinition Height="9*"/>
+            <RowDefinition Height="67*"/>
+            <RowDefinition Height="8*"/>
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -18,12 +18,12 @@
             <ColumnDefinition Width="295*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="ButtonBack" Content="Назад" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,695,0" VerticalAlignment="Top" Width="86" Height="35" Click="ButtonBack_OnClick" Background="#d49fc2 " />
-        <Frame x:Name="MainFrame" Content="Frame" Margin="0,0.333,0.333,0" Source="Pages/AuthPage.xaml" Grid.Row="1" Grid.Column="1" Navigated="MainFrame_OnNavigated"/>
-        <Rectangle Fill="#ebc3dd" Height="73" Margin="0,0,0.333,-0.333" Grid.Row="2" Stroke="Black" StrokeThickness="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
+        <Button x:Name="ButtonBack" Content="Назад" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,695.4,0" VerticalAlignment="Top" Width="86" Height="35" Click="ButtonBack_OnClick" Background="#d49fc2 " />
+        <Frame x:Name="MainFrame" Content="Frame" Margin="0,0.2,0.4,0" Source="Pages/AuthPage.xaml" Navigated="MainFrame_OnNavigated" Grid.ColumnSpan="2" Grid.Row="1"/>
+        <Rectangle Fill="#ebc3dd" Height="73" Margin="0,0,0.4,0" Grid.Row="1" Stroke="Black" StrokeThickness="0" VerticalAlignment="Bottom" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
         <!--<Button x:Name="ButtonCalc" Content="Калькулятор"  Click="КалькуляторButton_OnClick" Grid.Column="1" HorizontalAlignment="Left" Margin="647,5,0,0" VerticalAlignment="Top" Width="126" Height="44" Background="#d49fc2 " />-->
-        <Button Click="export_click" Content="Экспорт" Margin="3,10.2,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="152" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
-        <Button Click="import_click" Content="Импорт" Grid.Column="1" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="140" HorizontalAlignment="Right"/>
+        <Button Click="export_click" Content="Экспорт" Margin="3,0,0,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="152" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
+        <Button Click="import_click" Content="Импорт" Grid.Column="1" Margin="0,5,5.4,0" Grid.Row="2" VerticalAlignment="Top" Height="30" Width="140" HorizontalAlignment="Right"/>
 
 
     </Grid>
