--- a/ТРПО4/Pages/DobNati.xaml
+++ b/ТРПО4/Pages/DobNati.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ТРПО4.Pages.DobNas"
+﻿<Page x:Class="ТРПО4.Pages.DobNati"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,11 @@
       xmlns:local="clr-namespace:ТРПО4.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DobNas">
+      Title="DobNati">
 
-    <Grid Background="#ebc3dd" Margin="0,0,-100,-0.4">
+    <Grid Background="#ebc3dd">
+
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
@@ -23,15 +25,10 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Название" Grid.Row="0" Grid.Column="0" Margin="10,0,0,0"/>
-        <TextBlock Text="Вид населенного пункта" Grid.Row="1" Grid.Column="0" Margin="10,0,0,0"/>
-        <TextBlock Text="Область" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0"/>
+        <TextBlock Text="Название"    Grid.Row="1" Grid.Column="0" Margin="5,33.2,5,22.6" Grid.RowSpan="2"/>
 
         <!--<ComboBox Name="CmbCat" DisplayMemberPath="Category" Grid.Row="0" Grid.Column="1"/>-->
-        <TextBox Grid.Column="1" Margin="0,0,0,56.6" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,2.2,0,54.6" Grid.RowSpan="2"/>
-        <TextBox Margin="0,1.4,0,54.6" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1"/>
-
+        <TextBox Grid.Column="1" Margin="0,28.2,0,27.6" Grid.RowSpan="2" Grid.Row="1"/>
 
 
         <Button Name="ButtonSave" Content="Сохранить" Grid.Row="6" Click="ButtonSave_OnClick" Margin="-5,2.4,5,53.6"  Background="#d49fc2 " Grid.RowSpan="2"/>
