--- a/ТРПО4/Pages/DobNas.xaml
+++ b/ТРПО4/Pages/DobNas.xaml
@@ -27,10 +27,10 @@
         <TextBlock Text="Вид населенного пункта" Grid.Row="1" Grid.Column="0" Margin="10,0,0,0"/>
         <TextBlock Text="Область" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0"/>
 
-        <!--<ComboBox Name="CmbCat" DisplayMemberPath="Category" Grid.Row="0" Grid.Column="1"/>-->
-        <TextBox Grid.Column="1" Margin="0,0,0,56.6" Grid.RowSpan="2"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,2.2,0,54.6" Grid.RowSpan="2"/>
-        <TextBox Margin="0,1.4,0,54.6" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1"/>
+
+        <TextBox  Text="{Binding Naimenovanie}"  Grid.Column="1" Margin="0,0,0,56.6" Grid.RowSpan="2"/>
+        <TextBox  Text="{Binding  Vid_nas_pynkta}" Grid.Row="1" Grid.Column="1" Margin="0,2.2,0,54.6" Grid.RowSpan="2"/>
+        <ComboBox Name="CmbCat"   DisplayMemberPath="Naimenovanie" Margin="0,1.4,0,54.6" Grid.Row="2" Grid.RowSpan="2" Grid.Column="1"/>
 
 
 
