--- a/ТРПО4/Pages/DobSpec.xaml
+++ b/ТРПО4/Pages/DobSpec.xaml
@@ -26,11 +26,11 @@
         </Grid.ColumnDefinitions>
         <TextBlock Text="Наименование"    Grid.Row="1" Grid.Column="0" Margin="5,33.2,5,22.6" Grid.RowSpan="2"/>
 
-        <!--<ComboBox Name="CmbCat" DisplayMemberPath="Category" Grid.Row="0" Grid.Column="1"/>-->
-        <TextBox Grid.Column="1" Margin="0,28.2,0,27.6" Grid.RowSpan="2" Grid.Row="1"/>
+
+        <TextBox Text="{Binding Naimenovanie}"  Grid.Column="1" Margin="0,28.2,0,27.6" Grid.RowSpan="2" Grid.Row="1"/>
 
 
-        <Button Name="ButtonSave" Content="Сохранить" Grid.Row="6" Click="ButtonSave_OnClick" Margin="-5,2.4,5,53.6"  Background="#d49fc2 " Grid.RowSpan="2"/>
+        <Button Name="ButtonSave" Content="Сохранить" Grid.Row="5" Click="ButtonSave_OnClick" Margin="0,52.4,0,3.6"  Background="#d49fc2 " Grid.RowSpan="2"/>
 
 
 
