--- a/ТРПО4/Pages/Nationality.xaml
+++ b/ТРПО4/Pages/Nationality.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ТРПО4.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Nationality">
+      Title="Nationality"  IsVisibleChanged="Nationality_IsVisibleChanged">
 
  
 
@@ -28,7 +28,7 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <Button Name="ButtonAdd" Content="Добавить" HorizontalAlignment="Left" Click="ButtonAdd_OnClick" Margin="-5,14.8,0,74.6" Width="150" Grid.Row="1"/>
+            <Button Name="ButtonAdd" Content="Добавить" HorizontalAlignment="Left" Click="ButtonAdd_OnClick" Margin="5,14.8,0,74.6" Width="150" Grid.Row="1"/>
             <Button Name="ButtonDel" Content="Удалить" HorizontalAlignment="Right" Click="ButtonDel_OnClick" Margin="0,14.8,0,79.6" Width="150" Grid.Row="1"/>
 
 
