--- a/ТРПО4/Pages/UserPage2.xaml
+++ b/ТРПО4/Pages/UserPage2.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Button   Content="Пользователи" Click="Переход_1_OnClick" HorizontalAlignment="Left" Margin="236.8,6.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1"  FontSize="18" Grid.Row="1"/>
-        <Button Content="Специальность" Click="Переход_2_OnClick" HorizontalAlignment="Left" Margin="236.8,46.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1" Grid.Row="1"  FontSize="18"/>
+        <Button Content="Населенный пункт" Click="Переход_2_OnClick" HorizontalAlignment="Left" Margin="236.8,46.4,0,0" VerticalAlignment="Top" Width="275" Height="31" Grid.Column="1" Grid.Row="1"  FontSize="18"/>
 
     </Grid>
 </Page>
