--- a/ТРПО4/Pages/DobNati.xaml
+++ b/ТРПО4/Pages/DobNati.xaml
@@ -30,7 +30,7 @@
         <TextBox Text="{Binding Naimenovanie}"  Grid.Column="1" Margin="0,1.2,10,54.6" Grid.RowSpan="2" Grid.Row="1"/>
 
 
-        <Button Name="ButtonSave" Content="Сохранить" Grid.Row="6" Click="ButtonSave_OnClick" Margin="0,1.4,0,54.6"  Background="#d49fc2 " Grid.RowSpan="2"/>
+        <Button Name="ButtonSave" Content="Сохранить" Grid.Row="6" Click="ButtonSave_OnClick" Margin="113,0,287,0"  Background="#d49fc2 " Grid.Column="1"/>
 
 
 
